usa remove por index en vez de remove first por un problema de versiones